[project]
name = "smart-warehouse-shipment-delay-prediction"
version = "0.1.0"
description = "Tree ensemble baseline for smart warehouse shipment delay prediction."
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "hydra-core>=1.3.2",
    "lightgbm>=4.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
